wwwroot/css/infobase.css
.border-none, ul.wet-boew-zebra dl.border-none, ul.wet-boew-zebra dt.border-none, ul.wet-boew-zebra dd.border-none, h1.border-none, h4.border-none {
    border-style: none;
}

.padding-5 {
    padding: 5px;
}

.padding-2 {
    padding: 2px;
}

.padding-1 {
    padding: 1px;
}

.padding-0 {
    padding: 0px;
}

ul.wet-boew-zebra li.padding-5, dl.wet-boew-zebra li.padding-5, dl.wet-boew-zebra dt.padding-5 {
    padding: 5px;
}

.padding-lf-15 {
    padding: 1px 1px 1px 15px;
}

a.newwindow {
    position: relative;
    z-index: 24;
}

    a.newwindow:hover, a.newwindow:focus, a.newwindow:active {
        z-index: 25;
        background-color: #ff0
    }

    a.newwindow span {
        position: absolute;
        left: -9000px;
        width: 0;
        overflow: hidden;
    }

    a.newwindow:hover span, a.newwindow:focus span, a.newwindow:active span {
        display: block;
        position: absolute;
        top: -1.8em;
        left: 1em;
        width: 12em;
        border: 1px solid #BF7300;
        background-color: #FFE697;
        color: #000;
        text-align: center;
    }

div.example {
    margin-left: 5em;
}

.emailPopUp {
    border: 1px solid #3366CC;
    z-index: 2099;
    position: absolute;
    width: 360px;
    height: 70px;
    top: 215px;
    right: 100px;
    background-color: #CEDFFF;
}
/*table.table-layout table, table.table-xCondensed table, .table-xCondensed>table
{
  border: 1px solid #C0C0C0;
  margin: 0px;
  padding: 0px;
}
table.table-layout th, table.table-layout td
{
  border-style: solid;
  border-width: 3px 3px 1px 3px;
  border-color: #FFFFFF;
  padding: 1px 3px 1px 3px;
}

table.table-xCondensed th, table.table-xCondensed td
{
  border: 1px solid #C0C0C0;
  padding: 1px 3px 1px 3px;
}

table.table-xCondensed table, table.table-xCondensed table td
{
  border: 1px solid #FFFFFF;
  padding: 1px 3px 1px 3px;
}

.table-xCondensed>tbody>tr>th, .table-xCondensed>thead>tr>td,.table-xCondensed>thead>tr>th,.table-xCondensed thead tr
{
    background-color: aliceblue;
    color: black;
    font-weight:200;
      padding: 3px 3px 3px 3px;
       border: 1px solid;
  border-color:cadetblue; 
  text-align:center;
  font-size:18px;

}
.table-xCondensed>tbody>tr>td,.table-xCondensed>tfoot>tr>td,.table-xCondensed>tfoot>tr>th
{
  border: 1px solid;
  border-color:cadetblue; 
  padding: 1px 3px 1px 3px;
  font-size:90%;
}*/
input.button-wrap {
    white-space: normal;
    text-align: left;
}

.cursor-pointer {
    cursor: pointer;
}

div.ibRow {
    overflow: hidden;
    margin: 0px;
    padding: 0px;
    width: 100%;
}

div.borderBottomThin {
    border-bottom: 1px solid rgb(204, 204, 204) !important;
}

.clearBoth {
    clear: both;
}

div.ib2col1 {
    float: left;
    width: 49%;
    margin: 0px 3px 0px 0px;
    padding: 0px;
}

div.ib2col2 {
    float: left;
    width: 49%;
    margin: 0px;
    padding: 0px;
}

div.ibcol20 {
    width: 20%;
}

div.ibcol80 {
    width: 78%;
}

div.ExpColl {
    padding: 0px;
    margin: 0px;
    cursor: pointer;
    display: block;
}

    div.ExpColl:hover {
        background-color: #E6E6E6;
    }

img.inline {
    display: inline;
}

div.ReportViewer {
    padding: 0px;
    margin: 0px;
    line-height: 16px;
}

    div.ReportViewer table, div.ReportViewer table.td, div.ReportViewer td, div.ReportViewer img {
        margin: 0px;
        border-style: none;
        border-width: 0px;
        padding: 1px;
        background-color: transparent;
    }

    div.ReportViewer img {
        width: auto !important;
        height: auto;
    }

    div.ReportViewer input[type="image"] {
        padding: 0px;
        margin: 0px;
        background-color: transparent;
        width: auto !important;
        height: auto;
    }

    div.ReportViewer input[type="text"] {
        margin-top: 0px;
        margin-bottom: 0px;
        padding: 0px;
    }

    div.ReportViewer input {
        min-height: 16px !important;
    }

div.TreeView {
    padding: 0px;
    margin: 0px;
    line-height: 10px;
}

    div.TreeView table, div.TreeView td, div.TreeView img {
        margin: 0px;
        border-style: none;
        border-width: 0px;
        padding: 0px 1px 0px 2px;
        background-color: transparent;
        font-size: 100%;
    }

    div.TreeView img {
        width: auto !important;
        height: auto;
    }

div.form-TreeView {
    padding: 0px 1px 0px 2px;
    display: block;
}

    div.form-TreeView a {
        vertical-align: middle;
    }

    div.form-TreeView input {
        margin-right: 2px;
        vertical-align: middle;
    }

code {
    color: #31708f;
    background: transparent;
}

.bg-white {
    background: white;
}

.bg-lightblue {
    background: #d7ebfc;
}

.bg-lightblue2 {
    background: #3366CC
}

.nav-tabs > li {
    border: 0px;
    margin-left: 2px;
    padding: 0px;
}

    .nav-tabs > li > a {
        padding: 6px 8px 0px 8px;
        margin: 0px;
        background-color: #c7dee9;
        color: #0000CD;
    }

        /*.nav-tabs>li>a{padding:6px 4px 4px 0px; margin:0px;background-color:#cddbf5;}*/
        .nav-tabs > li > a.active {
            background-color: white;
            border: 1px solid #ddd;
            border-bottom-color: transparent;
            color: #00008B;
            font-weight: 600;
        }

.nav-pills > li > a {
    padding: 7px 8px;
}

.form-group-sm .form-control, .input-group-sm > .form-control, .input-group-sm > .input-group-addon, .input-group-sm > .input-group-btn > .btn, .input-sm {
    padding: 2px 3px;
}

.checkbox-inline label {
    display: inline-block;
    max-width: 100%;
    margin-bottom: 0;
    font-weight: 500;
    cursor: pointer;
}

.checkbox-inline.disabled label, .aspNetDisabled label {
    display: inline-block;
    max-width: 100%;
    margin-bottom: 0;
    font-weight: 400;
    color: #767676;
    cursor: not-allowed;
}

.width-5 {
    width: 5%;
}

.width-10 {
    width: 10%;
}

.width-20 {
    width: 20%;
}

.width-30 {
    width: 30%;
}

.width-40 {
    width: 40%;
}

.width-50 {
    width: 50%;
}

.width-60 {
    width: 60%;
}


summary::-webkit-details-marker {
    display: none;
}



summary:after {
    background: url('../assets/collapse.gif');
    background-repeat: no-repeat;
    float: left;
    height: 15px;
    width: 15px;
    content: " ";
    margin-right: 5px;
    margin-top: 2px;
}

details[open] summary:after {
    background: url('../assets/expand.gif');
    background-repeat: no-repeat;
}

